# mahi-mpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lin_test.m  mpc_withTorqueCost.fig  test1.m  visualize.m  workingMPC_8_30_21.m  workingMultiShoot_8_30_21.m  workingMultiShoot_simpleSumSquareCost.m
examples/: CMakeLists.txt  ex_model_control.cpp  ex_model_generate.cpp  mainTest.cpp  model_control_example.cpp  model_generate_example.cpp  moe_model_generate_example.cpp  test_codegen.cpp  thread_model_control_example.cpp
include/: nathanisdumb.hpp
include/Mahi/: Mpc.hpp
include/Mahi/Casadi/: G.hpp  M.hpp  ModelControl.hpp  ModelGenerator.hpp  ModelParameters.hpp  V.hpp
include/Mahi/Mpc/: ModelControl.hpp  ModelGenerator.hpp  ModelParameters.hpp  TrajectoryGenerator.hpp  WaypointGenerator.hpp
misc/: nathanisdumb.hpp
old/: LinearModel.hpp
old/Models/: DoublePendulumModel.hpp
src/: codegen_playground.cpp  codegen_usage.cpp  inverseTest.cpp  mainTest.cpp  model_control_example.cpp  model_generate_example.cpp  moe_model_generate_example.cpp  nlp_codegen.cpp  nlp_multishoot.cpp  test2.cpp  test_codegen.cpp
src/Mahi/Casadi/: LinearModel.cpp  ModelControl.cpp  ModelGenerator.cpp  ModelParameters.cpp
src/Mahi/Mpc/: ModelControl.cpp  ModelGenerator.cpp  ModelParameters.cpp  TrajectoryGenerator.cpp  WaypointGenerator.cpp
util/: testCorrectEquations.py
util/Equations/: nathanisdumb.txt
